--- a/memotestTFI/src/components/Club/Club.css
+++ b/memotestTFI/src/components/Club/Club.css
@@ -2,9 +2,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    background-color: #44f0f0;
+}
+
+.club.flipped {
+    transform: rotateY(180deg);
 }
 
 .club-image {
     width: 100%;
     height: 100%;
+    backface-visibility: hidden;
 }
