--- a/memotestTFI/src/views/Start/Start.css
+++ b/memotestTFI/src/views/Start/Start.css
@@ -4,6 +4,12 @@
     align-items: center;
     justify-content: center;
     gap: 5px;
+    border: 2px solid black;
+    padding: 5rem;
+    border-radius: 10px;
+    background-blend-mode: overlay;
+    background: rgba(0, 0, 0, 0.7) url('../../assets/background-clubes.jpg') no-repeat center;
+    background-size: cover;
 }
 
 .memo-select-start {
