--- a/memotestTFI/src/views/Start/Start.css
+++ b/memotestTFI/src/views/Start/Start.css
@@ -17,3 +17,9 @@
     flex-direction: column;
     gap: 10px;
 }
+
+@media (max-width: 768px) {
+    .start-container {
+        padding: 3rem;
+    }
+}
